Bug Fix: Tab Capture Mouse Pointer Off On Mac

The cursor renderer on Mac, takes the chrome window based coordinate
as web contents based coordinate.

This CL fixes that bug.

BUG=625237

Review-Url: https://codereview.chromium.org/2166953002
Cr-Commit-Position: refs/heads/master@{#407637}

Former-commit-id: f5a740f351bda75b14e6631baf00a0764f86ea15